--- a/app/views/items/preview.html.haml
+++ b/app/views/items/preview.html.haml
@@ -1,7 +1,7 @@
 %div.advent-calendar-breadcrumb
   %div.container
-    プレビュー
+    #{t "views.items.preview.header_preview"}
 = render "content", item: @item, advent_calendar_item_prev: nil, advent_calendar_item_next: nil
 %div.container.comments
-  %div.comment-title コメント
+  %div.comment-title #{t "activerecord.models.comment"}
   %hr
