--- a/app/views/shared/_header_fluid.html.haml
+++ b/app/views/shared/_header_fluid.html.haml
@@ -2,4 +2,4 @@
   %div.container-fluid
     = link_to "AdventCalendar", root_path
     \/
-    = link_to "#{date}日目", advent_calendar_item_path(id: id)
+    = link_to t("views.day_format", date: date), advent_calendar_item_path(id: id)
