--- a/app/views/advent_calendar_items/_form.html.haml
+++ b/app/views/advent_calendar_items/_form.html.haml
@@ -1,17 +1,17 @@
 = form_for advent_calendar_item do |f|
   %fieldset
     %div.form-group
-      = f.label :user_name, "お名前"
+      = f.label :user_name, t("activerecord.attributes.advent_calendar_item.user_name")
       %div
         = f.text_field :user_name, class:"form-control"
     %div.form-group
-      = f.label :comment, "コメント(カレンダーに表示されます)"
+      = f.label :comment, t("views.advent_calendar_items.comment")
       %div
         = f.text_area :comment, class:"form-control"
     = f.hidden_field :date, value: @advent_calendar_item.date
     %div
       - if @advent_calendar_item.id
-        = link_to "キャンセル", advent_calendar_item_path, class:"btn btn-default" 
+        = link_to t("helpers.submit.cancel"), advent_calendar_item_path, class:"btn btn-default"
       - else
-        = link_to "キャンセル", root_path, class:"btn btn-default"
-      = f.submit "登録する", class:"btn btn-primary"
+        = link_to t("helpers.submit.cancel"), root_path, class:"btn btn-default"
+      = f.submit t("helpers.submit.create"), class:"btn btn-primary"
