--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -1,5 +1,5 @@
 = render "shared/header_fluid", id: @item.advent_calendar_item_id, date: @date
 %div.container-fluid
-  %h2 AdventCalendar記事登録
+  %h2 #{t "views.items.new.title"}
   %hr
   = render "form", item: @item, attachment: @attachment
