--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,15 +4,13 @@
     %title radvent
     %meta{"http-equiv"=>"X-UA-Compatible", :content=>"IE=Edge"}
     %meta{"charset"=>"UTF-8"}
-    %link{:href=>"//netdna.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css", :rel=>"stylesheet"}
-    %link{:href=>"//maxcdn.bootstrapcdn.com/bootswatch/3.3.0/flatly/bootstrap.min.css", :rel=>"stylesheet"}
-    %link{:href=>"//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css", :rel=>"stylesheet"}
-    %link{:href=>"//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/styles/default.min.css", :rel=>"stylesheet"}
+    %link{:href=>"/assets/bootstrap.min.css", :rel=>"stylesheet"}
+    %link{:href=>"/assets/default.min.css", :rel=>"stylesheet"}
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
-    %script{:src=>"//netdna.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"}
-    %script{:src=>"//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/highlight.min.js"}    
+    %script{:src=>"/assets/bootstrap.min.js"}
+    %script{:src=>"/assets/highlight.min.js"}
     :javascript
       hljs.initHighlightingOnLoad()
   %body
