--- a/app/views/welcome/_detail.html.haml
+++ b/app/views/welcome/_detail.html.haml
@@ -3,7 +3,12 @@
     = advent_calendar_item.user_name + t("views.courtesy_title")
   - if advent_calendar_item.published?
     %p.text-info.advent-calendar-entry
-      = link_to advent_calendar_item.item.title, item_path(advent_calendar_item.item.id)
+      - items_count = advent_calendar_item.item.comments.count
+      - if items_count > 0
+        - items_title = "#{advent_calendar_item.item.title} (#{items_count})"
+      - else
+        - items_title = advent_calendar_item.item.title
+      = link_to items_title, item_path(advent_calendar_item.item.id)
   - else
     %p.advent-calendar-entry
       = advent_calendar_item.comment
