--- a/app/views/items/_form.html.haml
+++ b/app/views/items/_form.html.haml
@@ -1,3 +1,78 @@
+.modal.fade#markdown-modal(tabindex="-1" role="dialog" aria-labelledby="modal-label")
+  .modal-dialog
+    .modal-content
+      .modal-header
+        %button.close(type="button" data-dismiss="modal" aria-label="Close")
+          %span(aria-hidden="true") &times;
+        %h4.modal-title#modal-label
+          = t("modal.markdown.title")
+      .modal-body
+        %table.table.table-bordered
+          %thread
+            %tr
+              %th 表示
+              %th Markdown
+          %tbody
+            %tr
+              %td
+                %h1 見出し(h1)
+                %h6 見出し(h6)
+              %td
+                &= "# 見出し (h1)"
+                %br
+                &= "###### 見出し (h6)"
+            %tr
+              %td
+                %b 強調(太字)
+              %td ** 強調(太字) **
+            %tr
+              %td
+                %i 強調(斜体)
+              %td * 強調(斜体) *
+            %tr
+              %td
+                %ul
+                  %li リスト
+              %td - リスト
+            %tr
+              %td
+                %ol
+                  %li 番号付きリスト
+              %td 1. 番号付きリスト
+            %tr
+              %td
+                %blockquote 引用
+              %td > 引用
+            %tr
+              %td
+                %pre codeブロック
+              %td
+                ```
+                %br
+                codeブロック
+                %br
+                ```
+            %tr
+              %td
+                埋め込み
+                %code code
+              %td
+                埋め込み
+                `code`
+            %tr
+              %td
+                %a{:href => "http://example.org/"} リンク
+              %td
+                [リンク](http://example.org/)
+            %tr
+              %td
+                (水平線)
+                %hr
+              %td
+                (水平線)
+                %br
+                ***
+
 %div.form-container
   = form_for item do |f|
     %fieldset
@@ -9,7 +84,10 @@
           %div.col-sm-12
             %div.item-container
               %div.item-body
-                %div.item-header.item-body-header Markdown
+                %div.item-header.item-body-header
+                  Markdown
+                  %a{"data-toggle" => "modal", :href => "#markdown-modal", :class => "btn-xs btn-default"}
+                    %span.fa.fa-question
                 %div.item-body-content
                   = f.text_area :body, id: "item-text", placeholder:t("helpers.placeholder.text")
                   = render "form_attachment", attachment: attachment
