--- a/app/views/items/_form.html.haml
+++ b/app/views/items/_form.html.haml
@@ -20,5 +20,8 @@
       %div.pull-left
         = f.submit t("helpers.submit.preview"), name: "preview_button", class:"btn btn-success", formtarget:"_blank"
       %div.pull-right
-        = link_to t("helpers.submit.cancel"), advent_calendar_item_path(id: item.advent_calendar_item_id), class:"btn btn-default"
+        - if item.advent_calendar_item.published?
+          = link_to t("helpers.submit.cancel"), item_path(id: item.advent_calendar_item_id), class:"btn btn-default"
+        - else
+          = link_to t("helpers.submit.cancel"), advent_calendar_item_path(id: item.advent_calendar_item_id), class:"btn btn-default"
         = f.submit t("helpers.submit.create"), class:"btn btn-primary"
